[package]
name = "cargo-dub"
version = "0.1.2"
edition = "2021"
authors = ["Matheus C. França"]
description = "A cargo subcommand for dub"
license = "MIT"
repository = "https://github.com/kassane/cargo-dub"
keywords = ["cargo", "dub", "dlang", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "cargo-dub"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20.0"
